[package]
name = "pep610"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pep610"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
url = { version = "2.5.0", features = ["serde"] }
